// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar can render 1`] = `
<DocumentFragment>
  .emotion-10 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-1 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
  color: #7a7e82;
}

.emotion-1:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:870px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

.emotion-4 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-3 {
  color: #7a7e82 !important;
}

.emotion-3:hover {
  color: white;
}

.emotion-9 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-8 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-8 {
    padding: 50px 20px;
  }
}

.emotion-6 {
  display: inline-block;
}

.emotion-2 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-2 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-2 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-2 {
    width: 1170px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="bp3-navbar emotion-10"
  >
    <div
      class="emotion-2"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
      </div>
    </div>
    <div>
      <button
        class="bp3-button emotion-4"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-3"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-9"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-5"
                  >
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar renders environment 1`] = `
<DocumentFragment>
  .emotion-17 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-3 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
  color: #7a7e82;
}

.emotion-3:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:870px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

.emotion-6 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-5 {
  color: #7a7e82 !important;
}

.emotion-5:hover {
  color: white;
}

.emotion-13 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-12 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-12 {
    padding: 50px 20px;
  }
}

.emotion-10 {
  display: inline-block;
}

.emotion-1 {
  color: #49a4d5 !important;
  min-width: 0;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-9 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-16 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-16 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-16 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="bp3-navbar emotion-17"
  >
    <div
      class="emotion-4"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-3"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
        <span
          class="emotion-1 emotion-0"
          color="#49a4d5"
        >
          DEVELOPMENT
        </span>
      </div>
    </div>
    <div>
      <button
        class="bp3-button emotion-6"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-5"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-13"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-12"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-9"
                  >
                    <span>
                      <span
                        class="emotion-1 emotion-0"
                        color="#49a4d5"
                      >
                        DEVELOPMENT
                      </span>
                    </span>
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="emotion-16"
      color="#49a4d5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-9"
        >
          <span />
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar renders environment 2`] = `
<DocumentFragment>
  .emotion-17 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-3 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
  color: #7a7e82;
}

.emotion-3:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:870px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-3 {
    padding-left: 60px;
  }
}

.emotion-6 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-5 {
  color: #7a7e82 !important;
}

.emotion-5:hover {
  color: white;
}

.emotion-13 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-12 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-12 {
    padding: 50px 20px;
  }
}

.emotion-10 {
  display: inline-block;
}

.emotion-1 {
  color: #49a4d5 !important;
  min-width: 0;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-9 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-16 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-16 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-16 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="bp3-navbar emotion-17"
  >
    <div
      class="emotion-4"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-3"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
        <span
          class="emotion-1 emotion-0"
          color="#49a4d5"
        >
          DEVELOPMENT
        </span>
      </div>
    </div>
    <div>
      <button
        class="bp3-button emotion-6"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-5"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-13"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-12"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-9"
                  >
                    <span>
                      <span
                        class="emotion-1 emotion-0"
                        color="#49a4d5"
                      >
                        DEVELOPMENT
                      </span>
                    </span>
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="emotion-16"
      color="#49a4d5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-9"
        >
          <span />
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
